--- a/FLASK-ANGULAR-APP/angularposts/src/app/post/post.component.html
+++ b/FLASK-ANGULAR-APP/angularposts/src/app/post/post.component.html
@@ -1,1 +1,38 @@
-<p>post works!</p>
+<section>
+  <div class="single" *ngIf="post">
+    <h2>{{post.title}}</h2>
+
+    <img src="{{getImage(post.covername)}}" alt="{{post.covername}}" width="100">
+  </div>
+
+  <button class="cancel" (click)="enableEdit()" *ngIf="editMode; else cancel">Cancel Edit</button>
+  <ng-template #cancel>
+    <button class="edit" (click)="enableEdit()">Edit Post</button>
+  </ng-template>
+
+  <div *ngIf="editMode">
+    <p>Edit the current post bellow.</p>
+    <form *ngIf="!busy" (ngSubmit)="editPost(editForm.value)" [formGroup]="editForm">
+      <h2>Edit Post.</h2>
+      <p>Edit the form to update the post in the database</p>
+      <div class="formcontrol">
+        <label for="title">Title</label>
+        <input type="text" formControlName="title">
+      </div>
+      <div class="formcontrol">
+        <label for="content">Content</label>
+        <textarea formControlName="content"></textarea>
+      </div>
+      <div class="formcontrol">
+        <label for="cover" class="cover">Change Cover</label>
+        <input type="file" name ="cover" formControlName="cover" id="cover" (change)="handleInput($event)">
+      </div>
+      <input type="submit" [disabled]="!editForm.valid" value="Submit">
+    </form>
+    <div *ngIf="busy" class="processing">
+      <p>Processing request, please stand by, you will be redirected soon...</p>
+      <div class="loader">Loading....</div>
+    </div>
+  </div>
+  <button class="delete" (click)="deletePost(post.title)">Delete Post</button>
+</section>
